--- a/layouts/partials/li_compact.html
+++ b/layouts/partials/li_compact.html
@@ -8,7 +8,7 @@
   {{ $link = $item.Params.external_link }}
   {{ $target = "target=\"_blank\" rel=\"noopener\"" }}
 {{ end }}
-{{ if eq $item.Type "event" }}
+{{ if eq $item.Type "talk" }}
   {{ $show_authors_only = true }}
 {{ else if eq $item.Type "publication" }}
   {{ $show_authors_only = true }}
@@ -18,16 +18,6 @@
 
 {{ $has_attachments := partial "functions/has_attachments" . }}
 
-{{/* Get summary. */}}
-{{ $summary := "" }}
-{{ if $item.Params.summary }}
-  {{ $summary = $item.Params.summary | markdownify | emojify }}
-{{ else if .Params.abstract }}
-  {{ $summary = .Params.abstract | markdownify | emojify | truncate (site.Params.abstract_length | default 135) }}
-{{ else if $item.Summary }}
-  {{ $summary = $item.Summary }}
-{{ end }}
-
 <div class="media stream-item">
   <div class="media-body">
 
@@ -35,25 +25,18 @@
       <a href="{{$link}}" {{ $target | safeHTMLAttr }}>{{ $item.Title }}</a>
     </div>
 
-    {{ with $summary }}
-    <a href="{{ $link }}" {{ $target | safeHTMLAttr }} class="summary-link">
-      <div class="article-style">
-        {{.}}
-      </div>
-    </a>
-    {{ end }}
-
     <div class="stream-meta article-metadata">
+      {{ if eq $item.Type "talk" }}
+      <div>
+        {{ with $item.Params.event }}
+        <span>{{ . }}</span>
+        {{ end }}
+      </div>
 
-      {{ if eq $item.Type "event" }}
       <div>
         <span>
           {{ partial "functions/get_event_dates" $item }}
         </span>
-        {{ with $item.Params.location }}
-        <span class="middot-divider"></span>
-        <span>{{ . }}</span>
-        {{ end }}
       </div>
       {{ end }}
 
