markdownify some bits

--- a/layouts/partials/li_compact.html
+++ b/layouts/partials/li_compact.html
@@ -29,7 +29,7 @@
       {{ if eq $item.Type "talk" }}
       <div>
         {{ with $item.Params.event }}
-        <span>{{ . }}</span>
+        <span>{{ . | markdownify  }}</span>
         {{ end }}
       </div>
 
