--- a/layouts/partials/li_compact.html
+++ b/layouts/partials/li_compact.html
@@ -21,11 +21,11 @@
 <div class="media stream-item">
   <div class="media-body">
 
-    <div class="section-subheading article-title mb-0 mt-0">
+    <div class="section-subheading article-title mb-0">
       <a href="{{$link}}" {{ $target | safeHTMLAttr }}>{{ $item.Title }}</a>
     </div>
 
-    <div class="stream-meta article-metadata">
+    <div class="stream-meta article-metadata mt-0">
       {{ if eq $item.Type "talk" }}
       <div>
         {{ with $item.Params.event }}
