--- a/layouts/partials/li_compact.html
+++ b/layouts/partials/li_compact.html
@@ -18,7 +18,7 @@
 
 {{ $has_attachments := partial "functions/has_attachments" . }}
 
-<div class="media stream-item">
+<div class="media stream-item mb-0">
   <div class="media-body">
 
     <div class="section-subheading article-title mb-0">
