add year to publication page metadata

--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -34,17 +34,18 @@
 
   {{ if eq $page.Type "publication"}}
     {{ if eq $is_list 1}}
-        <span class="pub-publication">
+        <div class="pub-publication">
             {{ if $page.Params.publication_short }}
             {{ $page.Params.publication_short | markdownify }}
             {{ else if $page.Params.publication }}
             {{ $page.Params.publication | markdownify }}
             {{ end }}
-        </span>
-        {{ else }}
-        <span class="pub-publication">
+        </div>
+    {{ else }}
+        <div class="pub-publication">
             {{ $page.Params.publication | markdownify }}
-        </span>
+        </div>
+        <div>{{ $page.Params.date.Year }}</div>
     {{ end }}
   {{ end }}
 
