--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -107,3 +107,18 @@
 .dark .article-metadata {
     color: $sta-background;
 }
+
+.article-title a {
+    display: block;
+    color: #151515;
+    transition: color 0.6s ease;
+    line-height: 100%;
+  }
+
+  .section-subheading {
+    font-size: 1.25rem;
+    font-family: $sta-font-heading, sans-serif;
+    font-weight: bold;
+    margin-top: 1.5rem;
+    margin-bottom: 0.5rem;
+  }
