--- a/layouts/partials/li_compact.html
+++ b/layouts/partials/li_compact.html
@@ -19,7 +19,7 @@
 <div class="media stream-item mb-0">
   <div class="media-body">
 
-    <div class="section-subheading article-title mb-0">
+    <div class="section-subheading article-title">
       <a href="{{$link}}" {{ $target | safeHTMLAttr }}>{{ $item.Title }}</a>
     </div>
 
