--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -3,35 +3,10 @@
 
 <div class="article-metadata">
 
-  {{/* If `authors` is set and is not empty. */}}
-  {{ if $page.Params.authors }}
-  {{ $authorLen := len $page.Params.authors }}
-  {{ if gt $authorLen 0 }}
-  <div>
-    {{ partial "page_metadata_authors" $page }}
-  </div>
-  {{ end }}
-  {{ end }}
-
   {{ if eq $page.Type "talk" }}
   {{ partial "talk_metadata" (dict "page" $page "is_list" 0) }}
-  {{ end }}
-
-  {{ if eq $page.Type "publication"}}
-    {{ if eq $is_list 1}}
-        <div class="pub-publication">
-            {{ if $page.Params.publication_short }}
-            {{ $page.Params.publication_short | markdownify }}
-            {{ else if $page.Params.publication }}
-            {{ $page.Params.publication | markdownify }}
-            {{ end }}
-        </div>
-    {{ else }}
-        <div class="pub-publication">
-            {{ $page.Params.publication | markdownify }}
-        </div>
-        <div>{{ $page.Params.date.Year }}</div>
-    {{ end }}
+  {{ else if eq $page.Type "publication"}}
+  {{ partial "publication_metadata" (dict "page" $page "is_list" 0) }}
   {{ end }}
 
   {{ if and (eq $page.Type "post") (not (or (eq site.Params.reading_time false) (eq $page.Params.reading_time false))) }}
