--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -115,10 +115,32 @@
     line-height: 100%;
   }
 
-  .section-subheading {
+.section-subheading {
     font-size: 1.25rem;
     font-family: $sta-font-heading, sans-serif;
     font-weight: bold;
     margin-top: 1.5rem;
     margin-bottom: 0.5rem;
+  }
+
+.article-header-caption {
+    position: absolute;
+    bottom: -5%;
+    top: 100%;
+    right: 0;
+    left: 0;
+    transform: translate(0, 50%);
+    margin: 0 auto;
+    padding: 2px 5px;
+    color: $sta-dark-background;
+    font-size: 1em;
+    background: transparent;
+    text-align: center;
+    z-index: 5;
+    opacity: 1;
+    border-radius: 0 0 0 0;
+  }
+
+  .dark .article-header-caption {
+    color: $sta-background
   }
