--- a/layouts/partials/page_links.html
+++ b/layouts/partials/page_links.html
@@ -31,9 +31,9 @@
 {{ end }}
 {{ $resource := $page.Resources.GetMatch "cite.bib" }}
 {{ with $resource }}
-<a href="#" class="btn btn-outline-primary btn-page-header{{ if $is_list }} btn-sm{{end}} js-cite-modal"
-        data-filename="{{ .RelPermalink }}">
-  {{ i18n "btn_cite" }}
+<a href="#" class="btn btn-outline-primary btn-page-header{{ if $is_list }} btn-sm{{end}} js-cite-modal" data-filename="{{ .RelPermalink }}">
+    <i class="fas fa-quote-left"></i>
+    {{ i18n "btn_cite" | safeHTML }}
 </a>
 {{ end }}
 {{ with $page.Params.url_code }}
