get things to work with hugo-blox

--- a/layouts/partials/page_footer.html
+++ b/layouts/partials/page_footer.html
@@ -1,6 +1,6 @@
 <div class="space-below mb10"></div>
 {{ partial "tags" . }}
-{{ partial "share" . }}
+{{ partial "components/page_sharer" . }}
 
 {{ if site.Params.section_pager }}
 <div class="article-widget">
